# zarr_implementations

./: .dockerignore  .gitignore  Dockerfile  LICENSE  Makefile  README.md  environment.yml
.github/workflows/: blank.yml  build.yml  ci.yml  impl.yml  zarr-dev.yml
data/: generate_reference_image.py
data/n5-java.n5/: attributes.json
data/n5-java.n5/bzip2/: attributes.json
data/n5-java.n5/gzip/: attributes.json
data/n5-java.n5/lz4/: attributes.json
data/n5-java.n5/raw/: attributes.json
data/n5-java.n5/xz/: attributes.json
data/pyn5.n5/: attributes.json
data/pyn5.n5/bzip2/: attributes.json
data/pyn5.n5/gzip/: attributes.json
data/pyn5.n5/raw/: attributes.json
data/z5py.n5/: attributes.json
data/z5py.n5/gzip/: attributes.json
data/z5py.n5/raw/: attributes.json
data/z5py.zr/: .zgroup
data/z5py.zr/blosc/: .zarray  0.0.0  0.0.1  0.0.2  0.1.0  0.1.1  0.1.2  0.2.0  0.2.1  0.2.2  0.3.0  0.3.1  0.3.2  0.4.0  0.4.1  0.4.2  0.5.0  0.5.1  0.5.2  1.0.0  1.0.1  1.0.2  1.1.0  1.1.1  1.1.2  1.2.0  1.2.1  1.2.2  1.3.0  1.3.1  1.3.2  1.4.0  1.4.1  1.4.2  1.5.0  1.5.1  1.5.2  2.0.0  2.0.1  2.0.2  (+67 more)
data/z5py.zr/gzip/: .zarray  0.1.0  0.1.1  0.1.2  0.2.1  0.2.2  0.3.1  0.3.2  0.4.1  0.4.2  0.5.0  1.0.2  1.1.0  1.1.1  1.1.2  1.2.0  1.2.1  (+42 more)
doc/: development_overview.md
generate_data/: generate_pyn5.py  generate_reference_image.py  generate_z5py.py  generate_zarr.py  generate_zarrita.py
generate_data/js/: package-lock.json  package.json
generate_data/jzarr/: generate_data.sh  pom.xml
generate_data/n5-java/: generate_data.sh  pom.xml
generate_data/netcdf/: generate_data.sh  pom.xml
generate_data/netcdf-java/: pom.xml
generate_data/xtensor_zarr/: CMakeLists.txt  generate_data.sh
generate_data/xtensor_zarr/src/: main.cpp
implementations/: .bash_driver.sh  .conda_driver.sh  generate_zarr.py
implementations/Rarr/: driver.sh  environment.yml  generate_Rarr.R  generate_data.sh  install_packages.R  verify_data.R  verify_data_internal.R
implementations/js/: driver.sh  environment.yml  generate_data.sh  package-lock.json
implementations/jzarr/: driver.sh  environment.yml
implementations/n5-java/: driver.sh  environment.yml  pom.xml
implementations/pyn5/: driver.sh  environment.yml  generate_pyn5.py
implementations/xtensor_zarr/: CMakeLists.txt  driver.sh  environment.yml  generate_data.sh
implementations/z5py/: driver.sh  environment.yml
implementations/zarr-python/: driver.sh  environment.yml
implementations/zarrita/: driver.sh  environment.yml  generate_zarrita.py
test/: read_z5py_from_n5java.py  read_z5py_from_zarr.py  read_zarr_from_n5java.py  read_zarr_from_z5py.py  test_read_all.py
(+1865 files in other folders)
